--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         	 viewBox="0 0 2625.022 1342.022" enable-background="new 0 0 2625.022 1342.022" xml:space="preserve" width="300" height="200">
            <rect width="100%" height="100%" fill="none" />
-           <path fill="#160B10" d="M2562.057,112.664c-5.93,12.226,13.089,27.649,13.408,51.328c-0.967,3.791-2.837,7.289-3.816,11.093
+           <path  d="M2562.057,112.664c-5.93,12.226,13.089,27.649,13.408,51.328c-0.967,3.791-2.837,7.289-3.816,11.093
         	c-2.417-0.267-4.923,0.089-7.226-0.636c-33.512-20.05-36.245-21.483-53.631-18.038c-24.88,1.775-51.012,38.147-54.547,40.579
         	c-1,0.685-40.963,39.485-54.967,62.993c-1.056,0.331-2.086,0.661-3.078,1.005c-1.45,2.188-3.295,5.317-6.386,4.363
         	c-6.755-1.794-12.047-7.022-18.687-9.083c-14.172-2.325-33.569,14.577-40.185,28.126c-2.76,5.432-2.862,11.614-4.401,17.415
