Calculator frame basic interface added

--- a/index.html
+++ b/index.html
@@ -108,6 +108,85 @@
 
     <main>
       <section id="calculator">
+        <div class="container">
+          <div id="display">
+            <div id="history">
+              numbers
+            </div>
+            <div id="result">
+              0.
+            </div>
+          </div>
+          <div id="buttons">
+            <div class="row">
+              <button id="ac">
+                AC / Reset
+              </button>
+              <button id="squared">
+                x&sup2;
+              </button>
+              <button id="divide">
+                &divide;
+              </button>
+            </div>
+            <div class="row">
+              <button id="seven">
+                7
+              </button>
+              <button id="eight">
+                8
+              </button>
+              <button id="nine">
+                9
+              </button>
+              <button id="multiply">
+                &times;
+              </button>
+            </div>
+            <div class="row">
+              <button id="four">
+                4
+              </button>
+              <button id="five">
+                5
+              </button>
+              <button id="six">
+                6
+              </button>
+              <button id="subtract">
+                &minus;
+              </button>
+            </div>
+            <div class="row">
+              <button id="one">
+                1
+              </button>
+              <button id="two">
+                2
+              </button>
+              <button id="three">
+                3
+              </button>
+              <button id="add">
+                +
+              </button>
+            </div>
+            <div class="row">
+              <button id="zero">
+                0
+              </button>
+              <button id="decimal">
+                .
+              </button>
+              <button id="sign">
+                	&plusmn;
+              </button>
+              <button id="equals">
+                =
+              </button>
+            </div>
+          </div>
+        </div>
       </section>
       <section id="inputs">
       </section>
