Change meta data, project name to Calculator Gator

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Tech Streamers | A tool to track livestreamers in tech, by Pius Wong">
+    <meta name="description" content="Calculator Gator | A math tool by Pius Wong">
     <meta name="author" content="Pius Wong | www.piuswong.com">
 
     <!-- icons -->
@@ -20,7 +20,7 @@
   <body>
 
     <header>
-      <h1>The Calculator Alligator</h1>
+      <h1>The Calculator Gator</h1>
       <h2>A math toy by <a href="http://www.piuswong.com" title="Link to Pius's projects">Pius Wong</a></h2>
       <div id="mainChar" w3-include-html="img/alligator.html">
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
