Control SVG size w/ CSS

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <header>
       <h1>The Calculator Gator</h1>
       <h2>A math toy by <a href="http://www.piuswong.com" title="Link to Pius's projects">Pius Wong</a></h2>
-      <div id="mainChar" w3-include-html="img/alligator.html">
+      <div id="mainChar">
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-        	 viewBox="0 0 2625.022 1342.022" enable-background="new 0 0 2625.022 1342.022" xml:space="preserve" width="300" height="200">
+        	 viewBox="0 0 2625.022 1342.022" enable-background="new 0 0 2625.022 1342.022" xml:space="preserve">
            <rect width="100%" height="100%" fill="none" />
            <path  d="M2562.057,112.664c-5.93,12.226,13.089,27.649,13.408,51.328c-0.967,3.791-2.837,7.289-3.816,11.093
         	c-2.417-0.267-4.923,0.089-7.226-0.636c-33.512-20.05-36.245-21.483-53.631-18.038c-24.88,1.775-51.012,38.147-54.547,40.579
@@ -114,12 +114,12 @@
               numbers
             </div>
             <div id="result">
-              0.
+              0
             </div>
           </div>
           <div id="buttons">
             <div class="row">
-              <button id="ac">
+              <button id="clear">
                 AC / Reset
               </button>
               <button id="squared">
