--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="container">
           <div id="display">
             <div id="history">
-              numbers
+              history 7 x 8 = 
             </div>
             <div id="result">
               0
