Digit presses detected by mouse and keyboard

--- a/index.html
+++ b/index.html
@@ -125,54 +125,54 @@
               <button id="squared">
                 x&sup2;
               </button>
-              <button id="divide">
+              <button id="divide" class="operator" value="divide">
                 &divide;
               </button>
             </div>
             <div class="row">
-              <button id="seven">
+              <button id="seven" class="digit" value="7">
                 7
               </button>
-              <button id="eight">
+              <button id="eight" class="digit" value="8">
                 8
               </button>
-              <button id="nine">
+              <button id="nine" class="digit" value="9">
                 9
               </button>
-              <button id="multiply">
+              <button id="multiply" class="operator" value="multiply">
                 &times;
               </button>
             </div>
             <div class="row">
-              <button id="four">
+              <button id="four" class="digit" value="4">
                 4
               </button>
-              <button id="five">
+              <button id="five" class="digit" value="5">
                 5
               </button>
-              <button id="six">
+              <button id="six" class="digit" value="6">
                 6
               </button>
-              <button id="subtract">
+              <button id="subtract" class="operator" value="subtract">
                 &minus;
               </button>
             </div>
             <div class="row">
-              <button id="one">
+              <button id="one" class="digit" value="1">
                 1
               </button>
-              <button id="two">
+              <button id="two" class="digit" value="2">
                 2
               </button>
-              <button id="three">
+              <button id="three" class="digit" value="3">
                 3
               </button>
-              <button id="add">
+              <button id="add" class="operator" value="add">
                 +
               </button>
             </div>
             <div class="row">
-              <button id="zero">
+              <button id="zero" class="digit" value="0">
                 0
               </button>
               <button id="decimal">
