--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link rel="icon" type="image/png" href="favicon.ico"/>
 
-    <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Expanded|Oxygen|Exo+2" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Expanded|Oxygen|Exo+2|Patrick+Hand+SC" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
 
   </head>
@@ -103,6 +103,9 @@
         	c11.484-4.495,77.877-20.69,87.061-24.742c45.297-14.857,67.746-37.884,97.505-48.848c42.187-19.404,67.008-14.225,88.74-53.694
         	C2506.582-10.604,2589.134,52.018,2562.057,112.664z"/>
         </svg>
+        <div id="help">
+          <div>&mdash;</div><div id="helpText">Feed me numbers!</div>
+        </div>
       </div>
     </header>
 
