--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link rel="icon" type="image/png" href="favicon.ico"/>
 
-    <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Expanded|Oxygen|Exo+2|Patrick+Hand+SC" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oxygen|Abel|Patrick+Hand+SC" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
 
   </head>
