Keyboard commands help reference is in corner

--- a/index.html
+++ b/index.html
@@ -109,6 +109,42 @@
       </div>
     </header>
 
+    <aside>
+      <h4>Keyboard Shortcuts</h4>
+      <table>
+        <tr>
+          <td>clear/reset:</td><td>Esc</td>
+        </tr>
+        <tr>
+          <td>digits:</td><td>0-9</td>
+        </tr>
+        <tr>
+          <td>decimal point:</td><td>.</td>
+        </tr>
+        <tr>
+          <td>add:</td><td>+</td>
+        </tr>
+        <tr>
+          <td>subtract:</td><td>-</td>
+        </tr>
+        <tr>
+          <td>multiply:</td><td>*</td>
+        </tr>
+        <tr>
+          <td>divide:</td><td>/</td>
+        </tr>
+        <tr>
+          <td>square:</td><td>^</td>
+        </tr>
+        <tr>
+          <td>change sign:</td><td>~</td>
+        </tr>
+        <tr>
+          <td>equals:</td><td>=</td>
+        </tr>
+      </table>
+    </aside>
+
     <main>
       <section id="calculator">
         <div class="container">
