Footer updated; positioned in corner for <=1280px screens

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
     <footer>
       <div>
-        Powered by HTML/CSS/JavaScript</a>.
+        Powered by <a href="http://www.pioslabs.com">Pios Labs</a>
       </div>
       <div>
         Copyright 2017 <a href="http://www.piuswong.com" title="Link to Pius's projects">Pius Wong</a>
