--- a/index.html
+++ b/index.html
@@ -234,10 +234,10 @@
 
     <footer>
       <div>
-        Powered by <a href="http://www.pioslabs.com">Pios Labs</a>
+        Powered by <a href="http://www.pioslabs.com" title="Visit the website of the Pios Labs studio.">Pios Labs</a>
       </div>
       <div>
-        Copyright 2017 <a href="http://www.piuswong.com" title="Link to Pius's projects">Pius Wong</a>
+        Copyright 2017 <a href="http://www.piuswong.com" title="Browse some of Pius's projects.">Pius Wong</a>
       </div>
     </footer>
 
