Help text is in a text bubble

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         	C2506.582-10.604,2589.134,52.018,2562.057,112.664z"/>
         </svg>
         <div id="help">
-          <div>&mdash;</div><div id="helpText">Feed me numbers!</div>
+          <div></div><div id="helpText">Feed me numbers!</div>
         </div>
       </div>
     </header>
