Add structure for visualizations on big screens

--- a/index.html
+++ b/index.html
@@ -226,10 +226,16 @@
           </div>
         </div>
       </section>
-      <section id="inputs">
+
+      <section id="visualization">
+        <div id="visHistory">
+          DEBUG: left / history
+        </div>
+        <div id="visResult">
+          DEBUG: right / result
+        </div>
       </section>
-      <section id="outputs">
-      </section>
+
     </main>
 
     <footer>
