Show zero and one unit

--- a/index.html
+++ b/index.html
@@ -229,10 +229,14 @@
 
       <section id="visualization">
         <div id="visHistory">
-          DEBUG: left / history
+          <div class="collection">
+            DEBUG: left / history
+          </div>
         </div>
         <div id="visResult">
-          DEBUG: right / result
+          <div class="collection">
+            DEBUG: right / result
+          </div>
         </div>
       </section>
 
