Refactor: Clearing results when new numbers added...

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </div>
     </header>
 
-    <aside>
+    <aside title="Note: The animations work best if you don't type too fast.">
       <h4>Keyboard Shortcuts</h4>
       <table>
         <tr>
