Store font-awesome CSS locally

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Pius Wong | www.piuswong.com">
 
     <!-- icons -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="font-awesome.min.css" rel="stylesheet" type="text/css">
     <link rel="icon" type="image/png" href="favicon.ico"/>
 
     <link href="https://fonts.googleapis.com/css?family=Exo+2|Oxygen|Abel|Patrick+Hand+SC" rel="stylesheet">
