--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </div>
     </header>
 
-    <aside title="Note: The animations work best if you don't type too fast.">
+    <aside title="Try using the keyboard to control the calculator.">
       <h4>Keyboard Shortcuts</h4>
       <table>
         <tr>
