Update metadata for project

--- a/index.html
+++ b/index.html
@@ -2,11 +2,34 @@
 
   <head>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-85053368-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-85053368-1');
+    </script>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Calculator Gator | A math tool by Pius Wong">
+    <meta name="description" content="Calculator Gator | A math tool by Pius Wong | Calculator Gator is a simple web calculator that helps you visualize integers, fractions, addition, subtraction, multiplication, division, and squaring.">
     <meta name="author" content="Pius Wong | www.piuswong.com">
+
+    <meta property="og:site_name" content="Calculator Gator | A math tool by Pius Wong"/>
+    <meta property="og:title" content="Calculator Gator | A math tool by Pius Wong" />
+    <meta property="og:url" content="http://www.piuswong.com/calculatorgator/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="A web calculator to help you visualize integers, fractions, addition, subtraction, multiplication, division, and squaring." />
+    <meta property="og:image" content="http://www.piuswong.com/calculatorgator/img/teaser.png" />
+  	<meta name="twitter:card" content="summary_large_image" />
+  	<meta name="twitter:site" content="Calculator Gator" />
+  	<meta name="twitter:creator" content="@PiusWong">
+  	<meta name="twitter:title" content="Calculator Gator | A math tool by Pius Wong" />
+  	<meta name="twitter:description" content="A web calculator to help you visualize integers, fractions, addition, subtraction, multiplication, division, and squaring." />
+  	<meta name="twitter:image" content="http://www.piuswong.com/calculatorgator/img/teaser.png" />
 
     <!-- icons -->
     <link href="font-awesome.min.css" rel="stylesheet" type="text/css">
