Footer links open in new tab

--- a/index.html
+++ b/index.html
@@ -265,10 +265,10 @@
 
     <footer>
       <div>
-        Powered by <a href="http://www.pioslabs.com" title="Visit the website of the Pios Labs studio.">Pios Labs</a>
+        Powered by <a href="http://www.pioslabs.com" title="Pios Labs studio home (opens in new window)" target="_blank">Pios Labs</a>
       </div>
       <div>
-        Copyright 2020 <a href="http://www.piuswong.com" title="Browse some of Pius's projects.">Pius Wong</a>
+        Copyright 2020 <a href="http://www.piuswong.com" title="Pius's projects (opens in new window)" target="_blank">Pius Wong</a>
       </div>
     </footer>
 
