--- a/index.html
+++ b/index.html
@@ -263,6 +263,15 @@
 
     </main>
 
+    <div class="control-panel">
+      <ul>
+        <li>Red+ and Black- (DC electrical, USA)</li>
+        <li>Brown+ and Black- (DC electrical, Europe)</li>
+        <li>Black+ and Red- (accounting)</li>
+        <li>White+ and Black-</li>
+      </ul>
+    </div>
+
     <footer>
       <div>
         Powered by <a href="http://www.pioslabs.com" title="Pios Labs studio home (opens in new window)" target="_blank">Pios Labs</a>
