Slow down animation defaults; add speed control UI, not functional yet

--- a/index.html
+++ b/index.html
@@ -264,6 +264,10 @@
     </main>
 
     <div class="control-panel">
+      <div class="select-speed">
+        <label for="speed">Animation speed:</label>
+        <input type="range" min="200" max="1200" value="500" class="slider" id="speed">
+      </div>
       <div class="select-colors">
         <label for="colors">Color scheme:</label>
         <select id="colors">
