--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       gtag('config', 'UA-85053368-1');
     </script>
 
+    <title>The Calculator Gator | A web app for visualization of integer math operations, by Pios Labs</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
